Upgrade look, fix drag, tweak scrollbar

--- a/src/runtime/css/styles.css
+++ b/src/runtime/css/styles.css
@@ -1,3 +1,23 @@
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #FF000000;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: hsla(0,0%,100%,.2);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 /* !YaMusic */
 /* Logo */
 span.d-logo {
@@ -74,5 +94,14 @@ div.footer-app-install {
 }
 
 .head {
-  -webkit-app-region: drag
+  -webkit-app-region: drag;
+}
+
+.head_sticky_drag {
+  top: 0;
+  width: 100%;
+  height: 32px;
+  position: sticky;
+  background-color: red;
+  -webkit-app-region: drag;
 }
